--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "axios": "^1.13.2",
+    "buffer": "^6.0.3",
     "expo": "~54.0.30",
+    "expo-asset": "~12.0.12",
+    "expo-av": "~16.0.8",
     "expo-clipboard": "~8.0.8",
+    "expo-dev-client": "~6.0.20",
+    "expo-file-system": "~19.0.21",
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
     "expo-secure-store": "~15.0.8",
@@ -25,15 +30,18 @@
     "react": "19.1.0",
     "react-i18next": "^16.5.0",
     "react-native": "0.81.5",
+    "react-native-audio-record": "^0.2.2",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-live-audio-stream": "^1.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/expo__vector-icons": "^9.0.1",
-    "@types/react": "~19.1.0",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "expo-module-scripts": "^5.0.8",
     "typescript": "~5.9.2"
   },
